# sw24_p1

./: .gitignore  AllTests.c  AllTests.h  CMakeLists.txt  I like to eat shit for breakfast  main.c  model_input.c  model_input.h  passenger_decision_making.c  passenger_decision_making.h  path_finding.c  path_finding.h  simulation_loop.c  simulation_loop.h  structs.h  travel_time.c  travel_time.h  trip_generation.c  trip_generation.h
model_data/: Stations.txt  connections.txt  train_routes.txt  trains.txt
model_data/with_tunnel/: connections.txt  train_routes.txt  trains.txt
model_data/without_tunnel/: connections.txt  stations.txt  train_routes.txt  trains.txt
